cluster/apps/networking-system/external/opnsense/endpoints.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense
subsets:
  - addresses:
      - ip: ${CONFIG_VYOS_IP_ADDRESS}
    ports:
      - name: http
        port: 80
        protocol: TCP
