cluster/apps/networking-system/external/opnsense/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opnsense
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
