cluster/apps/networking-system/external/opnsense/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: opnsense
  labels:
    app.kubernetes.io/name: opnsense
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`opnsense.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: local-only
      services:
        - name: opnsense
          port: 80
          namespace: networking-system
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
